# cw20-och-token

./: .gitignore  Cargo.toml  README.md
src/: contract.rs
